# groupe-I1-Analyse-et-detection-de-sophismes-via-ia-symbolique

./: .gitignore  README.md  pyproject.toml
groupe-I1/: README.md  app.py
groupe-I1/data/processed/: fallacies_full.csv  fallacies_reduced.csv
groupe-I1/scripts/: evaluate_symbolic.py  normalize_dataset_template.py
groupe-I1/src/: __init__.py  argmodel.py  corpus_aif.py  extraction.py  llm_backend.py  main.py  nli_training.py  pipeline.py  rules.py  symbolic.py  training.py  transformer_training.py
groupe-I1/src/classifiers/: baseline.py  llm.py  nli.py  transformer.py
groupe-I1/src/extraction/: corpus_aif.py  extractor.py
groupe-I1/src/pipeline/: hybrid.py
groupe-I1/src/rules/: detector.py
groupe-I1/tests/: test_extraction.py  test_llm_classifier.py  test_rules.py  test_symbolic.py
presentation/: Sophismes neuro-symbolique.dc.html
