[project]
name = "groupe-i1-analyse-et-detection-de-sophismes-via-ia-symbolique"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.43.0",
    "datasets>=4.8.5",
    "jpype1>=1.7.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]

[dependency-groups]
dev = [
    "pyflakes>=3.4.0",
    "pytest>=9.0.3",
]
